# FieldScribe

./: .env.example  .gitignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
app/api/recordings/: route.ts
app/api/search/: route.ts
app/api/upload/: route.ts
app/r/[id]/: page.tsx
cloud/: package-lock.json  package.json  proxy.ts
cloud/app/: globals.css  layout.tsx  page.tsx
cloud/app/login/: page.tsx
cloud/components/: fieldtools-mark.tsx  library-search.tsx  pending-uploads.tsx  recording-pager.tsx  sign-out.tsx  summary-panel.tsx  theme-toggle.tsx  timeline.tsx  transcript-actions.tsx  transcript.tsx  upload.tsx  wordmark.tsx
cloud/lib/: export.ts  format.ts  scroll.ts  search-shared.ts  types.ts
cloud/lib/supabase/: config.ts  server.ts
components/: audio-player.tsx  library.tsx  recording-pager.tsx  recording-view.tsx  reprocess-menu.tsx  search-results.tsx  speaker-rail.tsx  status-chip.tsx  summary-panel.tsx  timeline.tsx  title-editor.tsx  transcript.tsx  upload-zone.tsx
db/: ddl.sql  schema.ts
lib/: db.ts  export.ts  format.ts  queries.ts  search-shared.ts  search.ts  status.ts
scripts/: make-test-clip.sh  sync.mjs
supabase/migrations/: 20260708_001_fieldscribe_tables.sql  20260708_002_upload_inbox.sql  20260722_003_upload_enhance.sql
tests/: export.test.ts
worker/: pyproject.toml  worker.py
worker/fs_worker/: asr.py  audio.py  config.py  db.py  diarize.py  merge.py  summarize.py
worker/tests/: test_merge.py
(+8 files in other folders)
